# vault-program-native

./: Cargo.toml  README.md
src/: entrypoint.rs  processor.rs
src/instructions/: close.rs  deposit.rs  initialize.rs  mod.rs  withdraw.rs
src/state/: vault_state.rs
tests/: test.rs
